Changes for tpop3d
$Id$

1.4.1

Hooks for POP-before-SMTP relaying support were implemented.

The facility as which tpop3d logs messages may now be changed from the
configuration file.

A serious bug in TPOP3D::AuthDriver which affected operation under
auth-other was corrected.

Fixed the behaviour of STAT after DELE.

UIDs in maildir mailboxes are now generated by an MD5 hash of the file name,
fixing a uniqueness problem in previous versions. This means that this version
of tpop3d will display different UIDs by comparison with old versions. See the
comment in the maildir_make_indexpoint function in maildir.c, and also the
archived mailing list posting at
  http://lists.beasts.org/pipermail/tpop3d-discuss/2001-November/000308.html
for more information, or if you want to use the old scheme regardless (not
recommended). In addition, tpop3d now marks messages in maildirs as `seen',
using the `:2,S' filename suffix, rather than just moving them to cur/.

Made logging of failed authentication attempts more informative, following a
suggestion by Jens Liebchen.

1.3.5

A bug in the log printing code which caused trouble on some architectures was
fixed. A bug in the maildir code which caused the STAT command to claim that
the size of the mailbox was 0 was also fixed. The code was cleaned up slightly
in a comp.lang.c sense.

Authenticators are now passed the IP address of the connected client, which
makes writing POP-before-SMTP authenticators easier.

Facility for specifying the SQL queries used by auth-mysql at runtime was
added, thanks to Mike Bremford. In addition, it is now possible to specify the
types of mailboxes used by auth-mysql.

Support for TCP Wrappers was added.

tpop3d will now remove a stale PID file on startup, rather than exiting.

Support for the MySQL PASSWORD() function as a password-hashing method was
added.

A bug in the supplied TPOP3D::AuthDriver perl module was fixed, thanks to
Steve Benson.
