@@ -22,8 +22,16 @@ auth-mysql-enable:      yes
 auth-mysql-database:    vmail
 auth-mysql-username:    vmail
 auth-mysql-password:    moocow
+auth-mysql-pass-query:  none
+auth-mysql-apop-query:  none
+auth-mysql-onlogin-query:   insert into relayers (user, domain, host) \
+                              values ('$(local_part)', '$(domain)', '$(clienthost)')
 
-auth-other-enable:      yes
-auth-other-program:     /home/chris/software/tpop3d/scripts/relaydbm
-auth-other-user:        root
-auth-other-group:       root
+#auth-other-enable:      yes
+#auth-other-program:     /home/chris/software/tpop3d/scripts/relaydbm
+#auth-other-user:        root
+#auth-other-group:       root
+
+auth-perl-enable:       yes
+auth-perl-start:        do '/home/chris/software/tpop3d/scripts/relaydbm';
+auth-perl-onlogin:      onlogin
